--- a/hello_app/templates/home.html
+++ b/hello_app/templates/home.html
@@ -3,5 +3,6 @@
 Home
 {% endblock %}
 {% block content %}
-<p>Home page for the Visual Studio Code Flask tutorial. You have now edited and committed</p>
+<p>Home page for the Visual Studio Code Flask tutorial.</p>
+<p>Redeployed!</p>
 {% endblock %}
