--- a/hello_app/templates/home.html
+++ b/hello_app/templates/home.html
@@ -4,5 +4,5 @@ Home
 {% endblock %}
 {% block content %}
 <p>Home page for the Visual Studio Code Flask tutorial.</p>
-<p>Redeployed!</p>
+<p>Re-Redeployed!</p>
 {% endblock %}
